# pendulum-sim

./: .clang-format  CMakeLists.txt  README.md
include/: NoiseFilter.hpp  RandomGen.hpp
output/: pendulum.csv
src/: CMakeLists.txt  NoiseFilter.cpp  RandomGen.cpp  main.cpp
